@@ -1,3 +1,5 @@
+1962 [Update] only the files which need an update are shown. if no file needs an update all files are shown.
+     [Update] added a checkbox to show all files
 1961 [AVS Cutter] update start/end frame when a section is clicked. Feature request #1660341
 1960 [Main Window] initial starting window opens in the visible area taking the taskbar into account. Feature request #2821392
      [VideoPlayer] taking taskbar into account, too
@@ -10,7 +12,7 @@
 1953 [Job] enhanced message in case a job is already aborted
 1952 [FFMSIndexer] enhanced progress window in case that the index file already exists
 1951 [MKV Muxer] fixed problem with chapter information in audio files
-1950 [One-Click] a new job will be added after the indexing job to show the progress of the preprocessing
+1950 [One-Click] a new job will be added after the indexing job to show the progress of the preprocessing. Feature request #1717535
 1949 [Audio Encoder] if AAC is detected FFAudioSource() will be used
      [Audio Encoder] downmix will be ignored if there are not more than 2 audio channels
 1948 changed ISO 639-2 language codes for Croatian, Romanian and Serbian
